--- a/website/src/pages/styles.module.css
+++ b/website/src/pages/styles.module.css
@@ -22,13 +22,9 @@
 
 @media screen and (max-width: 996px) {
   .heroText {
-    margin-bottom: 40px;
+    margin-bottom: 20px;
     text-align: center;
   }
-}
-
-.getStarted {
-  margin-right: 20px;
 }
 
 .buttons {
